...
      }
    },
    "Add Favorite": {
      "localizations": {
        "en": {
...
      }
    },
    "Artist Options": {
      "localizations": {
        "en": {
...
      }
    },
    "Cancel": {
      "localizations": {
        "en": {
...
      }
    },
    "Change Image": {
      "localizations": {
        "en": {
...
      }
    },
    "Choose Folder": {
      "localizations": {
        "en": {
...
      }
    },
    "Choose Image": {
      "localizations": {
        "en": {
...
      }
    },
    "Choose from Files": {
      "localizations": {
        "en": {
...
      }
    },
    "Create": {
      "localizations": {
        "en": {
...
      }
    },
    "Crop Cover": {
      "localizations": {
        "en": {
...
      }
    },
    "Desktop Style": {
      "localizations": {
        "en": {
...
      }
    },
    "Done": {
      "localizations": {
        "en": {
...
      }
    },
    "Encrypted Sharing": {
      "localizations": {
        "en": {
...
      }
    },
    "Favorites": {
      "localizations": {
        "en": {
...
      }
    },
    "Folder Options": {
      "localizations": {
        "en": {
...
      }
    },
    "Home": {
      "localizations": {
        "en": {
...
      }
    },
    "Home Options": {
      "localizations": {
        "en": {
...
      }
    },
    "Icons": {
      "localizations": {
        "en": {
...
      }
    },
    "Library": {
      "localizations": {
        "en": {
...
      }
    },
    "Library Options": {
      "localizations": {
        "en": {
...
      }
    },
    "List": {
      "localizations": {
        "en": {
...
      }
    },
    "Loop queue": {
      "localizations": {
        "en": {
...
      }
    },
    "Make Image": {
      "localizations": {
        "en": {
...
      }
    },
    "Make Priority Image": {
      "localizations": {
        "en": {
...
      }
    },
    "New Folder": {
      "localizations": {
        "en": {
...
      }
    },
    "Now Playing": {
      "localizations": {
        "en": {
...
      }
    },
    "Priority Folder": {
      "localizations": {
        "en": {
...
      }
    },
    "Priority Image": {
      "localizations": {
        "en": {
...
      }
    },
    "Queue": {
      "localizations": {
        "en": {
...
      }
    },
    "Remove Favorite": {
      "localizations": {
        "en": {
...
      }
    },
    "Select": {
      "localizations": {
        "en": {
...
      }
    },
    "Settings": {
      "localizations": {
        "en": {
...
      }
    },
    "Use Image": {
      "localizations": {
        "en": {
...
      }
    },
    "View Options": {
      "localizations": {
        "en": {
...
